fix problems in hw6